--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +86,6 @@
 
 
     <!-- Searchbar -->
-    <div class="search-bg">
     <div class="search-center">
         <div class="search-div">
             <div class="search">
@@ -95,7 +94,7 @@
             </div>
             <p class="searchbar">Search</p>
         </div>
-    </div></div>
+    </div>
 
 
 
@@ -126,7 +125,6 @@
     </div>
 
     <div class="container__cards">
-
         <div class="card">
             <img src="https://source.unsplash.com/random/296x296/?nature?1" alt="cards">
             <p class="card__text">Lorem, ipsum.</p>
@@ -145,9 +143,6 @@
         <div class="card">
             <img src="https://source.unsplash.com/random/296x296/?kid?1" alt="cards">
             <p class="card__text">Lorem, ipsum.</p>
-        </div>
-        <div class="arrwor">
-            <img src="arrwo.png" alt="arrwo">
         </div>
     </div>
 
@@ -262,8 +257,44 @@
             <p>Follow authentic travellers as they visit unknown destinations to write their own travel guide</p>
     </div>
 
-    </body>
-    </html>
+    <div class="contact">
+        <div class="s1">
+            <div class="p1">
+                <p>About Tripadvisor.</p>
+                <p>About Us</p>
+                <p>Press</p>
+                <p>Resources and Policies</p>
+                <p>Careers</p>
+                <p>Trust & Safety</p>
+                <p>Contact us</p>
+                <p>Accessibility Statement</p>
+            </div>
+            <div class="p2">
+                <p>Explore</p>
+                <p>Write a review</p>
+                <p>Add a Place</p>
+                <p>Join </p>
+                <p>Travellers' Choice</p>
+                <p>GreenLeaders</p>
+                <p>Help Centre</p>
+                <p>Travel Articles</p>
+            </div>
+            <div class="p3">
+                <p>Do Business With Us</p>
+                <p>Owners & DMO/CVB</p>
+                <p>Business Advantage</p>
+                <p>Sponsored Placements</p>
+                <p>Access our Content API</p>
+                <p>Get The App</p>
+                <p>iPhone App</p>
+                <p>Android App</p>
+            </div>
+
+        </div>
+        <div class="s2">Tripadvisor Sites <br>
+            Book tours and attraction tickets on Viator</div>
+    </div>
+
 </body>
 
 </html>
